# PAOO

src/: CMakeCache.txt  CMakeLists.txt  Makefile  PAOO  cmake_install.cmake  main  main.cpp
src/Camera/: CMakeLists.txt  CameraLux.h  Makefile  camera.cpp  camera.h
src/Camin/: CMakeLists.txt  Makefile  camin.cpp  camin.h
src/Student/: CMakeLists.txt  Makefile  student.cpp  student.h
